2006-11-19  Don Allingham  <don@gramps-project.org>
	* src/DbLoader.py: try to catch a None value for default directory

2006-11-19  Brian Matherly  <brian@gramps-project.org>
	* src/ViewManager.py: Fix 0000576: Credits window behind about window

2006-11-18  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Fix 0000543: Multimedia-Objects marked as 
		private are visible in narrative web-report

2006-11-18  Alex Roitman  <shura@gramps-project.org>
	* src/ReportBase/_StyleEditor.py (__init__): Translate string.

2006-11-18  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationshipView.py: fix messages
	* help/C/gramps.xml: improvements in text
	* various: remove unused figures

2006-11-17  Don Allingham  <don@gramps-project.org>
	* src/ManagedWindow.py: catch missing item error

2006-11-16  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: share parents button
	* src/images/share-fam.png: share parents button
	* src/gramps_main.py: share parents button

2006-11-16  Alex Roitman  <shura@phy.ucsf.edu>
	* src/Reorder.py: Import gettext.

2006-11-15  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPerson.py: save previous window size
	* data/gramps.schemas.in: default transactions to off, previous editperson window size
	* src/Config/_GrampsConfigKeys.py: default transaction to off, previous editperson window size
	* src/Editors/_EditFamily.py: remove dead code
	* src/plugins/DetDescendantReport.py: remove dead code

2006-11-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetAncestralReport.py: Add family Events
	* src/plugins/DetDescendantReport.py: Add family Events

2006-11-13  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: fix FAM_WIDTH

2006-11-12  Don Allingham  <don@gramps-project.org>
	* src/Viewmanager.py: prompt before abandoning changes; enable autobackup
	* src/GrampsCfg.py: enable autobackup
	* src/Config/_GrampsConfigKeys.py: enable autobackup