@@ -1,4 +1,5 @@
 2006-11-19  Don Allingham  <don@gramps-project.org>
+	* src/Utils.py: probably_alive should onlyuse primary events
 	* src/DbLoader.py: try to catch a None value for default directory
 
 2006-11-19  Brian Matherly  <brian@gramps-project.org>
